# Template-embedded-pico

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: main.c
